--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
     <head>
         <meta charset="utf-8">
         <title>Lonely Road of Svg</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+
     </head>
     <body>
+        <div class="container">
         <h1>Lonely Road of SVG</h1>
         <ul>
             <li><a href="test.html">Testing for SVG</a></li>
             <li><a href="shapes.html">Shapes</a></li>
-            <li><a href="js-vanilla.html">Generating SVG with JavaScript</a></li>
-            <li><a href="js-d3.html">Generating SVG with d3</a></li>
-            <li><a href="js-svg.html">Generating SVG with svg.js</a></li>
+            <li><a href="sneaker-app.html">Kicks Kreator</a></li>
+
         </ul>
+
+    <blockquote>Lonely Road of SVG presentation by @adrianpomilio</blockquote>
+    </div>
     </body>
 </html>
