--- a/shapes.html
+++ b/shapes.html
@@ -3,11 +3,95 @@
     <head>
         <meta charset="utf-8">
         <title>Lonely Road of Svg</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+
     </head>
     <body>
+        <div class="container">
+
+        <a class="btn btn-primary" href="index.html">home</a>
         <h1>Shapes</h1>
-        <ul>
-            <li><a href="index.html">home</a></li>
-        </ul>
+        <p>For the actual specification visit: <a href="http://www.w3.org/TR/SVG/shapes.html">http://www.w3.org/TR/SVG/shapes.html</a><p>
+        <h2>Rect</h2>
+        <svg width="400px" height="200px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <rect
+                x="1"
+                y="1"
+                width="300"
+                height="100"
+                fill="none"
+                stroke="blue"
+                stroke-width="2"/>
+            <rect
+                x="30"
+                y="20"
+                width="60"
+                height="50"
+                fill="black"
+                rx="20"
+                ry="20" />
+            <rect
+                x="130"
+                y="20"
+                width="100"
+                height="50"
+                fill="black"
+                rx="20"
+                 />
+        </svg>
+        <h2>Circle</h2>
+        <style media="screen">
+            svg circle {
+                cx:100px;
+                cy:100px;
+                r:50px;
+            }
+        </style>
+        <svg width="400px" height="200px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <circle
+                cx="100"
+                cy="100"
+                r="50"
+                fill="green"
+                stroke="blue"
+                stroke-width="10"  />
+        </svg>
+        <h2>Ellipse</h2>
+        <svg width="400px" height="200px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <g transform="translate(90,50)">
+                <ellipse
+                    rx="80"
+                    ry="40"
+                    fill="black"  />
+            </g>
+        </svg>
+        <h2>Line</h2>
+        <svg width="400px" height="200px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <line
+                x1="10" y1="40"
+                x2="100" y2="80"
+                stroke-width="5"
+                stroke="blue"  />
+        </svg>
+        <h2>Polyline</h2>
+        <svg width="400px" height="200px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <polyline
+            fill="none"
+            stroke="blue"
+            stroke-width="5"
+            points="10,50
+                    150,80
+                    180,20
+                    200,30" />
+
+        </svg>
+        <h2>Polygon</h2>
+        <svg width="400px" height="200px" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <polygon points="100,10 40,198 190,78 10,78 160,198"
+            fill:"blue" />
+
+        </svg>
+        <blockquote>Lonely Road of SVG presentation by @adrianpomilio</blockquote>
+        </div>
     </body>
 </html>
