final commit from preso

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Lonely Road of Svg</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
 
     </head>
     <body>
@@ -12,6 +12,9 @@
         <ul>
             <li><a href="test.html">Testing for SVG</a></li>
             <li><a href="shapes.html">Shapes</a></li>
+            <li><a href="viewbox.html">View Box</a></li>
+            <li><a href="def-use.html">Def Use</a></li>
+            <li><a href="transform.html">Transform Origin</a></li>
             <li><a href="sneaker-app.html">Kicks Kreator</a></li>
 
         </ul>
