--- a/shapes.html
+++ b/shapes.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Lonely Road of Svg</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" media="screen" title="no title" charset="utf-8">
 
     </head>
     <body>
